Resolved horizontal scrollbar issue and implement forgot password things

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,7 +220,7 @@ ul.lesson-menu li a:hover,
     box-shadow: 0px 2px 12px #d4d8d5;
     width: 100%;
     float: left;
-    min-height: calc(100vh - 180px);
+    min-height: calc(100vh - 125px);
 }
 ul.lesson-menu li a {
     height: 88px;
